spade-language-server/src/tests/snapshots/spade_language_server__tests__hover__hover_function.snap
---
source: spade-language-server/src/tests/hover.rs
expression: "expected.to_string() + \"\\n---code ⬆️ hover ⬇️ ---\\n\" + & s"
---
struct NameOfStruct {
    field_a: bool,
    field_b: int<4>,
}
fn foo() -> bool {
    let s = NameOfStruct(false, 2);

    let cow = s;
    false
}

fn bar() -> bool {
    foo()
 //  ^[1] hover
}

---code ⬆️ hover ⬇️ ---
```spade
fn foo() -> '_ bool
```
---
**Expression type**:
```spade
bool
```
