spade-language-server/src/tests/snapshots/spade_language_server__tests__hover__hover_on_chained_method.snap
---
source: spade-language-server/src/tests/hover.rs
expression: "expected.to_string() + \"\\n---code ⬆️ hover ⬇️ ---\\n\" + & s"
---
struct S {}

impl S {
    /// Docs
    fn meth(self, a: bool) -> bool {
        true
    }
}

impl bool {
    fn meth2(self) -> uint<8> {0}
}

fn bar() -> uint<8> {
    S()
        .meth(true)
        .meth2()
//       ^[1] hover
}

---code ⬆️ hover ⬇️ ---
**Expression type**:
```spade
uint<8>
```
---
```spade
impl bool
fn meth2(self: bool) -> '_ uint<8>
```
