spade-language-server/src/tests/snapshots/spade_language_server__tests__hover__hover_on_method_chain_with_unrelated_type_error_in_module_gives_correct_results.snap
---
source: spade-language-server/src/tests/hover.rs
expression: "expected.to_string() + \"\\n---code ⬆️ hover ⬇️ ---\\n\" + & s"
---
struct S {}
impl S {
    fn meth(self) -> bool {true}
}

fn test() {
    let a = 0 + true;

    S().meth();
    //  ^[1] hover

    true
}

---code ⬆️ hover ⬇️ ---
**Expression type**:
```spade
bool
```
---
```spade
impl proj::S
fn meth(self: S) -> '_ bool
```
