spade-language-server/src/tests/snapshots/spade_language_server__tests__hover__hover_on_single_elem_enum_variant.snap
---
source: spade-language-server/src/tests/hover.rs
expression: "expected.to_string() + \"\\n---code ⬆️ hover ⬇️ ---\\n\" + & s"
---
enum A {
    Field,
    Field2{val1: bool, val2: int<8>}
}
fn foo() {
    let s = A::Field;
            //  ^[1] hover
}

---code ⬆️ hover ⬇️ ---
enum variant
```spade
proj::A::Field
```
---
**Expression type**:
```spade
proj::A
```
