spade-language-server/src/tests/snapshots/spade_language_server__tests__hover__hover_unit_with_docs.snap
---
source: spade-language-server/src/tests/hover.rs
expression: "expected.to_string() + \"\\n---code ⬆️ hover ⬇️ ---\\n\" + & s"
---
/// This is a doc string
fn foo() -> bool {true}

fn bar() -> bool {
    foo()
 //  ^[1] hover
}

---code ⬆️ hover ⬇️ ---
```spade
fn foo() -> '_ bool
```
---
This is a doc string
---
**Expression type**:
```spade
bool
```
